Remove connection string

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=yourserver.com;port=0000;database=YourDatabase;uid=yourid;password=YourPassword"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
