--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=YourServer;port=0000;database=YourDB;uid=YourUser;password=YourPassword!"
+    "DefaultConnection": "server=codeboxx.cq6zrczewpu2.us-east-1.rds.amazonaws.com;database=ben;uid=codeboxx;password=Codeboxx1!"
   },
   "Logging": {
     "LogLevel": {
